# esp32-fw-showcase

./: .gitignore  CMakeLists.txt  README.md  ble_panel.html  partitions.csv  sdkconfig.defaults  sdkconfig.no_motors
.github/workflows/: ci.yml
components/ble_stack/: CMakeLists.txt  Kconfig  ble_stack.c
components/ble_stack/include/: ble_stack.h
components/bsp/: CMakeLists.txt  Kconfig  bsp.c
components/bsp/include/: bsp.h
components/display/: CMakeLists.txt  display.c
components/display/include/: display.h
components/encoder/: CMakeLists.txt  Kconfig  encoder.c
components/encoder/include/: encoder.h
components/menu_mgr/: CMakeLists.txt  menu_mgr.c
components/menu_mgr/include/: menu_mgr.h
components/motors/: CMakeLists.txt  Kconfig  motors.c
components/motors/include/: motors.h
components/ota_manager/: CMakeLists.txt  Kconfig  ota_manager.c
components/ota_manager/include/: ota_manager.h
components/power_mgr/: CMakeLists.txt  Kconfig  power_mgr.c
components/power_mgr/include/: power_mgr.h
components/wifi_mgr/: CMakeLists.txt  Kconfig  wifi_mgr.c
components/wifi_mgr/include/: wifi_mgr.h
main/: CMakeLists.txt  main.c
